fix(sidenav) : Sidenav now has good height on mobile device

--- a/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/src/app/shared/components/side-menu/side-menu.component.scss
@@ -33,7 +33,7 @@
   flex: 0 0 auto;
   z-index: 1000;
   top: 0;
-  height: 100vh;
+  height: 100%;
   background-color: #2E4766;
   @include customMixins.scrollbar('#side-menu-container', false);
 
